[project]
name = "ab-testing-example"
version = "0.1.0"
description = "Simple A/A testing example on a sample of the Criteo click dataset."
authors = [{name = "Example Author"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scipy>=1.8",
    "datasets>=2.0.0",
    "pandas>=1.3.0",
    "xxhash>=3.4.1",
]

[tool.ruff]
line-length = 100
